--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,11 +18,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "react",
-    "@typescript-eslint",
-    "react-hooks"
-  ],
+  "plugins": ["react", "@typescript-eslint", "react-hooks"],
   "rules": {
     "react/react-in-jsx-scope": "off"
   },
@@ -31,4 +27,4 @@
       "version": "detect"
     }
   }
-} 
+}
