--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "type-check": "tsc --noEmit",
     "preview": "vite preview",
     "prepare": "husky install",
     "deploy": "npm run build && gh-pages -d dist"
@@ -16,6 +18,7 @@
     "@types/decimal.js": "^0.0.32",
     "antd": "^5.26.2",
     "decimal.js": "^10.5.0",
+    "lightweight-charts": "^5.0.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
@@ -23,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@lhci/cli": "^0.12.0",
     "@playwright/test": "^1.53.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -40,6 +44,7 @@
     "lighthouse": "^12.6.1",
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
+    "serve": "^14.2.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.0",
     "vite": "^7.0.0"
