--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "preview": "vite preview",
-    "prepare": "husky install",
+    "prepare": "node -e \"if(process.env.CI!=='true')require('child_process').execSync('husky install')\"",
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
