--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
+    "test": "playwright test",
     "preview": "vite preview",
     "prepare": "node -e \"if(process.env.CI!=='true')require('child_process').execSync('husky install')\"",
     "deploy": "npm run build && gh-pages -d dist"
