--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "type-check": "tsc --noEmit",
-    "test": "playwright test",
-    "preview": "vite preview",
+    "dev": "npx vite",
+    "build": "npx vite build",
+    "lint": "npx eslint --ext .js,.jsx,.ts,.tsx src",
+    "format": "npx prettier --write .",
+    "format:check": "npx prettier --check .",
+    "type-check": "npx tsc --noEmit",
+    "test": "npx playwright test",
+    "preview": "npx vite preview",
     "prepare": "node -e \"if(process.env.CI!=='true')require('child_process').execSync('husky install')\"",
     "deploy": "npm run build && gh-pages -d dist"
   },
