--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,34 +64,8 @@ jobs:
           npm config set fund false
           npm config set audit false
 
-      - name: Clear npm cache
-        run: npm cache clean --force
-
       - name: Install dependencies
-        run: |
-          echo "=== Before npm install ==="
-          pwd
-          ls -la
-          echo "=== Removing existing node_modules and package-lock.json ==="
-          rm -rf node_modules package-lock.json
-          echo "=== Running npm install ==="
-          npm install --no-audit
-          echo "=== After npm install ==="
-          ls -la node_modules/ | head -10
-          echo "=== npm ls output ==="
-          npm ls
-          echo "=== npm ls vite output ==="
-          npm ls vite
-
-      - name: Debug Vite configuration
-        run: |
-          echo "Current directory: $(pwd)"
-          echo "Vite config exists: $(ls -la vite.config.ts)"
-          echo "Node modules vite: $(ls -la node_modules/vite/package.json 2>/dev/null || echo 'vite not in node_modules')"
-          echo "Vite binary: $(which vite || echo 'vite not in PATH')"
-          echo "Npx vite version: $(npx vite --version)"
-          echo "Npm list vite:"
-          npm list vite
+        run: npm install --no-audit
 
       - name: Build project
         run: npm run build
@@ -172,6 +146,9 @@ jobs:
 
       - name: Start local server
         run: npx serve dist/ -p 8080 &
+
+      - name: Wait for server
+        run: sleep 5
 
       - name: Run Playwright tests
         run: npm run test
