ci: npm optional false

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
           npm config set registry https://registry.npmjs.org/
           npm config set fund false
           npm config set audit false
+          npm config set optional false
 
       - name: Install dependencies
         run: npm install --no-audit
@@ -63,6 +64,7 @@ jobs:
           npm config set registry https://registry.npmjs.org/
           npm config set fund false
           npm config set audit false
+          npm config set optional false
 
       - name: Install dependencies
         run: npm install --no-audit
@@ -96,6 +98,7 @@ jobs:
           npm config set registry https://registry.npmjs.org/
           npm config set fund false
           npm config set audit false
+          npm config set optional false
 
       - name: Install dependencies
         run: npm install --no-audit
@@ -131,6 +134,7 @@ jobs:
           npm config set registry https://registry.npmjs.org/
           npm config set fund false
           npm config set audit false
+          npm config set optional false
 
       - name: Install dependencies
         run: npm install --no-audit
@@ -184,6 +188,7 @@ jobs:
           npm config set registry https://registry.npmjs.org/
           npm config set fund false
           npm config set audit false
+          npm config set optional false
 
       - name: Install dependencies
         run: npm install --no-audit
