--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,11 +70,14 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Rename dist to mini-trader
+        run: mv dist mini-trader
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: build-files
-          path: dist/
+          path: mini-trader/
 
   lighthouse:
     name: Lighthouse CI
@@ -104,7 +107,13 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build-files
-          path: dist/
+          path: mini-trader/
+
+      - name: Start local server
+        run: npx serve . -p 8080 --single &
+
+      - name: Wait for server
+        run: sleep 5
 
       - name: Run Lighthouse CI
         run: npx @lhci/cli autorun
@@ -139,13 +148,13 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build-files
-          path: dist/
+          path: mini-trader/
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
       - name: Start local server
-        run: npx serve dist/ -p 8080 &
+        run: npx serve . -p 8080 --single &
 
       - name: Wait for server
         run: sleep 5
@@ -192,11 +201,11 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build-files
-          path: dist/
+          path: mini-trader/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./mini-trader
           cname: ${{ secrets.CNAME }}
