--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "gh-pages": "^6.3.0",
     "globals": "^16.2.0",
+    "http-server": "^14.1.1",
     "husky": "^9.1.7",
     "lighthouse": "^12.6.1",
     "lint-staged": "^16.1.2",
